--- a/vercel.json
+++ b/vercel.json
@@ -1,3 +1,3 @@
 {
-  "functions": {"api/*.py": {"runtime": "vercel-python@4.7.2"}}
+  "functions": {"api/*.py": {"runtime": "@vercel/python@4.7.2"}}
 }
